derive/tests/compile_fail/tuple_struct.rs
use config_derive::Deserialize;

#[derive(Deserialize)]
struct MyTuple(u32, String);

fn main() {}
